--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,19 +26,16 @@
                         
                         <li class="nav-item">
 
-                            <a class="BTN nav-link" asp-area="noticias" asp-controller="" asp-action="Index">Noticias</a>
-
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Noticias</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="Noticia" asp-action="Index">Noticias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
-
+                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="BTN nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
