--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -73,8 +73,8 @@
                 @Html.DisplayFor(modelItem => item.Eliminado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.UsuarioId">Edit</a>
-                <a asp-action="Delete" asp-route-id="@item.UsuarioId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.UsuarioId">Editar</a>
+                <a asp-action="Delete" asp-route-id="@item.UsuarioId">Eliminar</a>
             </td>
         </tr>
 }
